--- a/app/src/main/res/layout/fragment_add_members.xml
+++ b/app/src/main/res/layout/fragment_add_members.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    style="@style/Background"
     android:layout_height="match_parent"
     tools:context=".UI.Fragment.AddMembersFragment">
 
@@ -16,7 +17,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorSurface">
+            style="@style/Background">
 
             <ImageButton
                 android:id="@+id/backButton"
@@ -24,6 +25,7 @@
                 android:layout_height="wrap_content"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:contentDescription="Back"
+                style="@style/iconTintColor"
                 android:src="@drawable/back" />
 
             <EditText
