--- a/app/src/main/res/layout/myfriends_layout_item.xml
+++ b/app/src/main/res/layout/myfriends_layout_item.xml
@@ -14,7 +14,7 @@
 
         <ImageView
             android:id="@+id/selected"
-            style="@style/iconTintColor"
+            style="@style/singleIconTintColor"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:background="@drawable/ripple_circle_background"
