--- a/app/src/main/res/drawable/ripple_circle_background.xml
+++ b/app/src/main/res/drawable/ripple_circle_background.xml
@@ -8,7 +8,8 @@
     </item>
     <item>
         <shape android:shape="oval">
-            <solid android:color="@color/chip_unselected_border" />
+            <solid android:color="@color/white" />
+            <stroke android:width="1dp" android:color="@color/myback" />
         </shape>
     </item>
 </ripple>
