--- a/app/src/main/res/layout/bill_detail_item_layout.xml
+++ b/app/src/main/res/layout/bill_detail_item_layout.xml
@@ -41,7 +41,7 @@
             android:layout_width="wrap_content"
             android:text="$"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
+            style="@style/billWordColor"
             android:textSize="16sp"
             android:textStyle="bold" />
 
@@ -50,7 +50,7 @@
             android:layout_width="wrap_content"
             android:text="20"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
+            style="@style/billWordColor"
             android:textSize="16sp"
             android:textStyle="bold" />
     </LinearLayout>
