--- a/app/src/main/res/layout/fragment_add_group.xml
+++ b/app/src/main/res/layout/fragment_add_group.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
+    style="@style/Background"
     tools:context=".UI.Fragment.AddGroupFragment">
 
     <RelativeLayout
@@ -65,12 +66,14 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/etSignUpUsername"
             android:layout_width="match_parent"
+            style="@style/CustomTextInputLayout"
             android:layout_height="wrap_content"
             android:paddingStart="@dimen/_10sdp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                style="@style/CustomTextInputEditText"
                 android:hint="Group name"
                 android:inputType="text"
                 android:textColor="@color/black"
@@ -90,6 +93,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Type"
+        style="@style/billWordColor"
         android:textSize="16sp"
         android:textStyle="bold" />
 
