--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
+    style="@style/Background"
     tools:context=".UI.Fragment.ProfileFragment">
 
     <com.google.android.material.imageview.ShapeableImageView
@@ -24,6 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_10"
         android:text=""
+        style="@style/billWordColor"
         android:textAlignment="center"
         android:textSize="@dimen/_13ssp" />
 
@@ -47,7 +49,7 @@
             android:layout_height="24dp"
             android:layout_marginEnd="12dp"
             android:src="@drawable/notification"
-            app:tint="@color/black" />
+            style="@style/iconTintColor" />
 
         <TextView
             android:layout_width="0dp"
@@ -57,11 +59,12 @@
             android:maxLines="1"
             android:text="Push Notifications"
             android:id="@+id/enable_push_notifications"
-            android:textColor="@color/black"
+            style="@style/billWordColor"
             android:textSize="@dimen/_14ssp" />
 
-        <androidx.appcompat.widget.SwitchCompat
+        <com.google.android.material.switchmaterial.SwitchMaterial
             android:layout_width="wrap_content"
+            style="@style/switchTheme"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"/>
 
@@ -84,7 +87,7 @@
             android:layout_height="24dp"
             android:layout_marginEnd="12dp"
             android:src="@drawable/night_mode"
-            app:tint="@color/black" />
+            style="@style/iconTintColor" />
 
         <TextView
             android:layout_width="0dp"
@@ -93,7 +96,7 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:text="Switch Theme"
-            android:textColor="@color/black"
+            style="@style/billWordColor"
             android:textSize="@dimen/_14ssp" />
 
         <ImageView
@@ -101,7 +104,7 @@
             android:layout_height="24dp"
             android:layout_marginStart="12dp"
             android:src="@drawable/right"
-            app:tint="@color/black" />
+            style="@style/iconTintColor" />
 
     </LinearLayout>
     <LinearLayout
@@ -120,7 +123,7 @@
             android:layout_height="24dp"
             android:layout_marginEnd="12dp"
             android:src="@drawable/support_us"
-            app:tint="@color/black" />
+            style="@style/iconTintColor" />
 
         <TextView
             android:layout_width="0dp"
@@ -129,7 +132,7 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:text="Support Us"
-            android:textColor="@color/black"
+            style="@style/billWordColor"
             android:textSize="@dimen/_14ssp" />
 
         <ImageView
@@ -137,7 +140,7 @@
             android:layout_height="24dp"
             android:layout_marginStart="12dp"
             android:src="@drawable/right"
-            app:tint="@color/black" />
+            style="@style/iconTintColor" />
 
     </LinearLayout>
 
