--- a/app/src/main/res/layout/friends_layout.xml
+++ b/app/src/main/res/layout/friends_layout.xml
@@ -21,10 +21,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:text="Mubeen"
+        style="@style/billWordColor"
         android:layout_weight="1"
         android:layout_marginStart="16dp"
-        android:textSize="16sp"
-        android:textColor="?android:attr/textColorPrimary" />
+        android:textSize="16sp" />
 
     <ImageView
         android:id="@+id/selected"
