--- a/app/src/main/res/layout/fragment_bill_details.xml
+++ b/app/src/main/res/layout/fragment_bill_details.xml
@@ -192,9 +192,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_20sdp"
-            android:background="@drawable/textview_border"
             android:text=""
-            style="@style/billWordColor"
+            style="@style/descWordColor"
             android:textSize="16sp" />
 
         <Button
