--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -40,7 +40,10 @@
     <style name="WordColor">
         <item name="android:textColor">#0288D1</item>
     </style>
-
+    <style name="descWordColor">
+        <item name="android:textColor">#1C1C1E</item>
+        <item name="android:background">@drawable/textview_border</item>
+    </style>
     <style name="billWordColor">
         <item name="android:textColor">#1C1C1E</item>
     </style>
